apps/arr/bazarr/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  labels:
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/instance: bazarr
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metrics
      port: 9707
      targetPort: metrics
    - name: more-metrics
      port: 9708
      targetPort: more-metrics
  selector:
    app.kubernetes.io/instance: bazarr
    app.kubernetes.io/name: bazarr
