apps/arr/bazarr/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
spec:
  rules:
    - host: bazarr.mobrockers.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: bazarr
                port:
                  name: http
            pathType: Prefix
  tls:
    - hosts:
        - bazarr.mobrockers.com
